utilizar ignore para evitar carpetas

--- a/Esme_git_pruebas/index.html
+++ b/Esme_git_pruebas/index.html
@@ -9,5 +9,8 @@
 <body>
     <p>Lorem jopiefjpgpe{ skeofgpasop</p>
     <i>jfiwjff</i>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae eius inventore necessitatibus nemo, veniam et aperiam, deleniti ipsam molestias ea maxime ipsa enim. Culpa officiis earum laboriosam libero molestiae dolores.</p>
+    </div>
 </body>
 </html>
